# midi-viscount-rte0616

./: .gitignore  README.md
firmware/: CMakeLists.txt  Makefile  firmware.ino  pdlbrdkeys.cpp  pdlbrdkeys.h  sketch.yaml
firmware/firmware/: AHardwareInterface.h  AMIDIInterface.h  CalibrationConfig.h  EEPROMInterface.cpp  EEPROMInterface.h  ExtraPedalInterface.cpp  ExtraPedalInterface.h  HardwareInterface.cpp  HardwareInterface.h  IEEPROMInterface.h  IExtraPedalInterface.h  IHardwareInterface.h  IMIDIInterface.h  IMIDINotesService.cpp  IMIDINotesService.h  IMemoryService.h  IPedalInterface.h  MIDICCService.cpp  MIDICCService.h  MIDIConfig.h  MIDINotesService.cpp  MIDINotesService.h  MIDINotesServiceManager.cpp  MIDINotesServiceManager.h  MIDISysexInterface.cpp  MIDISysexInterface.h  MIDISysexService.cpp  MIDISysexService.h  Makefile  MemoryService.cpp  MemoryService.h  MonodicNotesService.cpp  MonodicNotesService.h  PedalInterface.cpp  PedalInterface.h  PolyphonicNotesService.cpp  PolyphonicNotesService.h  RTE0616Pedalboard.cpp  RTE0616Pedalboard.h  USBMIDIInterface.cpp  (+2 more)
firmware/test/: CMakeLists.txt
firmware/test/mocks/: Arduino.cpp  Arduino.h  ArduinoMock.cpp  ArduinoMock.h  EEPROMInterfaceMock.h  ExtraPedalInterfaceMock.h  HardwareInterfaceMock.h  MIDINotesServiceMock.h  MemoryServiceMock.h  PedalInterfaceMock.h  SerialPrinter.cpp  SerialPrinter.h  USBMIDIMock.h
firmware/test/testsuite/: ArduinoTestFixture.h  ExtraPedalInterfaceTest.cpp  FullChainTest.cpp  HardwareInterfaceTest.cpp  MIDICCServiceTest.cpp  MIDINotesServiceTest.cpp  MIDISysexInterfaceTest.cpp  MIDISysexServiceTest.cpp  MemoryServiceTest.cpp  MonodicNotesServiceTest.cpp  NotesServiceManagerTest.cpp  PedalInterfaceTest.cpp  PolyphonicNotesServiceTest.cpp  testone.cpp
midi-viscount-rte0616/: Makefile  main.cpp
rte0616-config-app/: .gitignore  README.md  angular.json  forge.config.js  main.js  package-lock.json  package.json
rte0616-config-app/src/: index.html
rte0616-config-app/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  midi.service.ts
rte0616-config-app/src/app/calibrate/: calibrate.component.html  calibrate.component.spec.ts  calibrate.component.ts
rte0616-config-app/src/app/configure/: configure.component.html  configure.component.ts
rte0616-config-app/src/app/devices/: devices.component.css  devices.component.html  devices.component.ts
rte0616-config-app/src/app/tabs/: tabs.component.html  tabs.component.ts
schematics/kicad/rev1.1/: midi-viscount-rte0616.kicad_pro
schematics/kicad/rev1.2/: midi-viscount-rte0616.kicad_pcb  midi-viscount-rte0616.kicad_prl  midi-viscount-rte0616.kicad_pro  midi-viscount-rte0616.kicad_sch
schematics/kicad/rev1.3/: midi-viscount-rte0616.kicad_sch
schematics/midi-viscount-rte0616/: midi-viscount-rte0616.kicad_pcb  midi-viscount-rte0616.kicad_prl  midi-viscount-rte0616.kicad_pro  midi-viscount-rte0616.kicad_sch
schematics/midi-viscount-rte0616/rev1.1/: midi-viscount-rte0616.kicad_sch
schematics/midi-viscount-rte0616/rev1.2/: midi-viscount-rte0616.kicad_pcb  midi-viscount-rte0616.kicad_sch
schematics/midi-viscount-rte0616/rev1.3/: midi-viscount-rte0616.kicad_pcb  midi-viscount-rte0616.kicad_prl  midi-viscount-rte0616.kicad_pro
